Adicionado informações a respeito do SESMT na página e README.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" ></script>
         <script type="text/javascript" src="js/main.js"></script>
-	   	<title>Tela Inicial</title>
+	   	<title>Dimensionamento SESMT</title>
 	   	<link rel="stylesheet" type="text/css" href="css/main.css" />
 	</head>
 	<body>
@@ -32,10 +32,12 @@
 				<div class="row">
 					<div class="col-sm-1"></div>
 					<div class="col-sm-10">
-						<p>Esta aplicação realiza o dimensionamento de SESMT de uma empresa com base no grau de risco e na quantidade 
-						de funcionários da empresa ou a soma dos funcionários dos estabelecimentos (quando isso pode ser aplicado). 
-						Este dimensionamento não está tratando os profissionais que poderiam atuar em período parcial, ou seja, o dimensionamento final 
-						contabiliza os profissionais com possibilidade de atuação parcial como se fossem profissionais com atuação integral.</p>
+						<p class="text-justify">
+							Esta aplicação realiza o dimensionamento de SESMT (Serviços Especializados em Engenharia de Segurança e em Medicina do Trabalho) 
+							de uma empresa com base no grau de risco e na quantidade de funcionários da empresa ou a soma dos funcionários dos estabelecimentos 
+							(quando isto for necessário). Este dimensionamento não está tratando os profissionais que poderiam atuar em período parcial, 
+							ou seja, o dimensionamento final contabiliza os profissionais com possibilidade de atuação parcial como se fossem profissionais com atuação integral.
+						</p>
 				    </div>
 					<div class="col-sm-1"></div>
 				</div>
@@ -95,6 +97,35 @@
 						    </table>
 						  </div>
       				</form>
+      			</div>
+      			<div class="col-sm-1"></div>
+      		</section>
+      		<section class="row rounded p-3 m-2">
+	   			<div class="col-sm-1"></div>
+				<div class="col-sm-10">
+      				<h2>Informações a respeito do SESMT (NR-4):</h2>
+      				<br>
+      				<ul>
+      					<li class="text-justify">4.2.2 As empresas que possuem mais de 50% de seus empregados em estabelecimento cuja gradação de risco seja de grau superior ao da atividade principal deverão dimensionar o SESMET em função do maior grau de risco.</li>
+      					<li class="text-justify">4.2.3 Mais de um estabelecimento, pode centralizar o SESMET desde que não ultrapasse 5000m.</li>
+      					<li class="text-justify">4.2.5.1 Para empresas enquadradas no grau de risco 1 o dimensionamento do SESMET obedecerá a Tabela abixo, considerando-se como número de empregados o somatório dos empregados existentes no estabelecimento que possua o maior número e a média aritmética do número de empregados dos demais estabelecimentos.</li>
+      					<li class="text-justify">4.2.5.2 Para empresas enquadradas no grau de risco 2, 3 e 4 o dimensionamento do SESMET obedecerá a Tabela abaixo, considerando como número de empregados o somatório dos empregados em todos os estabelecimentos.</li>
+      				</ul>
+      				<br>
+      				<h4>Composição SESMT</h4>
+      				<br>
+      				<ul>
+      					<li>Engenheiro de Segurança do Trabalho</li>
+      					<li>Médico do Trabalho</li>
+      					<li>Técnico de Segurança do Trabalho</li>
+      					<li>Enfermeiro do Trabalho</li>
+      					<li>Auxiliar de Enfermagem do Trabalho</li>
+      				</ul>
+      				<br>
+      				<h4 class="text-center">Tabela Dimensionamento SESMT</h4>
+      				<br>
+					<img class="img-fluid rounded mx-auto d-block" alt="Tabela de dimensionamento do SESMT" 
+					src="https://2.bp.blogspot.com/-Vn1dAa-CqQw/UlMbo4BFILI/AAAAAAAAAQQ/0B-5HWsjU30/s1600/SESMT.jpg">
       			</div>
       			<div class="col-sm-1"></div>
       		</section>
